# Jackal-MPC

./: .gitmodules
src/acados_fixedpath_obst_nnsp/: CMakeLists.txt  feedbackutils.py  model.py  nn_mpc_node.py  package.xml  solversetup.py  trifolium_path.csv  trifolium_path.csv:shield
src/acados_nnsp/: CMakeLists.txt  feedbackutils.py  model.py  nn_mpc_node.py  package.xml  solversetup.py  spatialConversion.py
src/acados_nnsp/models/: bestmodel_backup.pt
src/acados_obst_nnsp/: CMakeLists.txt  feedbackutils.py  model.py  nn_model.py  nn_mpc_node.py  package.xml  setup.py  solversetup.py  spatialConversion.py
src/mpc_low/: CMakeLists.txt  package.xml  temp_reader.py  trajectory.rviz
src/mpc_low/solver/: acados_sim_solver_Wheelchair.c  acados_sim_solver_Wheelchair.h  acados_solver_Wheelchair.c  acados_solver_Wheelchair.h  acados_solver_holder (copy).cpp  acados_solver_holder.cpp
src/mpc_low/solver/Wheelchair_constraints/: Wheelchair_constr_h_fun.c  Wheelchair_constr_h_fun_jac_uxt_zt.c  Wheelchair_constr_h_fun_jac_uxt_zt_hess.c  Wheelchair_constraints.h  Wheelchair_h_constraint.h
src/mpc_low/solver/Wheelchair_cost/: Wheelchair_cost.h
src/mpc_low/solver/Wheelchair_model/: Wheelchair_expl_ode_fun.c  Wheelchair_expl_ode_hess.c  Wheelchair_expl_vde_adj.c  Wheelchair_expl_vde_forw.c  Wheelchair_model.h
src/mpc_low/solver/acados_libs/lib/: link_libs.json
src/mpc_low/src/: custom_odometry (copy).cpp  custom_odometry.cpp  custom_odometry.cpp:shield  custom_odometry_sim.cpp  low_solver (another copy).cpp  low_solver (copy).cpp  low_solver.cpp
src/visuals_mpc/: CMakeLists.txt  cylinders.rviz  package.xml
src/visuals_mpc/src/: spheres (copy).cpp  spheres.cpp
src/wheelchair_description/: CMakeLists.txt  package.xml
src/wheelchair_description/config/: controller.yaml  robot_localization.yaml
src/wheelchair_description/launch/: display.launch  gazebo.launch  spawn_wheelchair.launch  urdf.rviz  wheelchair_control.launch  wheelchair_description.launch
src/wheelchair_description/meshes/: BackWheel_L.STL  BackWheel_R.STL  IMU.STL  backCam.STL  base_link.STL  frontCam.STL  frontSupport_L.STL  frontSupport_R.STL  frontWheel_L.STL  frontWheel_R.STL
src/wheelchair_description/meshes/meshes/: BackWheel_L.STL  BackWheel_R.STL  IMU.STL  backCam.STL  base_link.STL  frontCam.STL  frontSupport_L.STL  frontWheel_L.STL  frontWheel_R.STL
src/wheelchair_description/src/: custom_odometry.cpp
src/wheelchair_description/urdf/: materials.xacro  wheelchair.gazebo  wheelchair.trans  wheelchair.xacro  wheelchair_assembly_urdf.xacro  wheelchair_first.xacro
src/wheelchair_description/urdf/wheelchair/: model.config  model.sdf  wheelchair.dae
src/wheelchair_fixedpath_nnsp/: CMakeLists.txt  feedbackutils.py  model.py  nn_mpc_node.py  package.xml  plotFcn.py  solversetup.py
